# notion_query

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.claude/commands/: deploy.md
docs/: solution.md
docs_notion/: 00_getting_started.md  01_working_with_databases.md  02_property_types.md  03_working_with_page_content.md  04_workspace_document_types.md  05_webhooks.md  README.md  business_flows_and_relation_mappings.md  notion_properties_analysis.md  notion_properties_summary.md  project_people_relation_explanation.md
docs_notion/reference/: 00_intro.md  01_authentication.md  02_versioning.md  03_request_limits.md  04_status_codes.md  05_page.md  06_retrieve_page.md  07_retrieve_page_markdown.md  08_update_page_markdown.md  09_block.md  10_get_block_children.md  11_data_source.md  12_query_data_source.md  13_database.md  14_search.md  15_rich_text.md  16_page_properties.md  17_working_with_markdown.md  18_working_with_databases.md  19_working_with_page_content.md  20_upgrade_guide_2025.md  README.md  api-endpoints.md  workspace-setup-guide.md
scripts/: deploy.sh  full_sync.py
src/: config.py  mcp_server.py
src/api/: app.py  routes_search.py  routes_tools.py
src/indexing/: chunker.py  embedder.py  qdrant_store.py
src/notion/: block_parser.py  client.py  extractor.py  sync.py
src/retrieval/: hybrid_search.py
src/utils/: fault_tolerance.py
